# velero-operator

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  charmcraft.yaml  coverage.xml  pyproject.toml  requirements.txt  test.yaml  tox.ini
.github/: .jira_sync_config.yaml  CODEOWNERS  automatic_backport_tracks.yaml
.github/workflows/: check.yaml  on_pull_request.yaml  on_push.yaml  publish.yaml  release.yaml  test_prometheus_rules.yaml  tiobe_scan.yaml
lib/charms/data_platform_libs/v0/: azure_storage.py
lib/charms/velero_libs/v0/: velero_backup_config.py
lib/charms/velero_operator/v0/: velero_backup_config.py
src/: charm.py  config.py  constants.py  k8s_utils.py  utils.py  velero.py
src/libs/: azure_service_principal.py
src/prometheus_alert_rules/: prometheus_alert_rules.yaml
src/velero/: __init__.py  core.py  utils.py  velero.py  velero_providers.py
src/velero/crds/: __init__.py  backup.py  restore.py  schedule.py
src/velero/providers/: __init__.py  azure.py  classes.py  gcs.py  s3.py
tests/integration/: conftest.py  helpers.py  test_azure_relation.py  test_backup_relation.py  test_charm.py  test_gcs_relation.py  test_k8s_backup_target.py  test_lib.py  test_metrics.py  test_s3_relation.py  test_schedule.py
tests/integration/resources/: test_resources.yaml  test_resources.yaml.j2
tests/integration/test_charm/: charmcraft.yaml  requirements.txt
tests/integration/test_charm/lib/charms/velero_libs/v0/: velero_backup_config.py
tests/integration/test_charm/lib/charms/velero_operator/v0/: velero_backup_config.py
tests/integration/test_charm/src/: charm.py
tests/unit/: test_charm.py  test_velero.py  test_velero_providers.py
tests/unit/test_alert_rules/: test_prometheus_alerts.yaml
tests/unit/velero/: test_core.py  test_core_schedule.py  test_providers.py  test_utils.py
